--- a/Tistory_mainpage_clone/app/src/main/res/values/strings.xml
+++ b/Tistory_mainpage_clone/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="recent">최근글</string>
     <string name="first_subscriber">"With님의\nWithSR's Box"</string>
     <string name="second_subscriber">"겁없이 살자님의\n해보고 말하자"</string>
+    <string name="blog">"근본있는 블로그"</string>
+    <string name="blog2">"downcount.tistory.com"</string>
+
 </resources>
